feat: updated keys and applied new figma file